--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8081
+
 management.endpoints.web.exposure.include=*
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+
+
+
+calculation.url= ${CALCULATION_URL:localhost}
+calculation.port= ${CALCULATION_PORT:8080}
