--- a/calculationbff/values.yaml
+++ b/calculationbff/values.yaml
@@ -25,7 +25,9 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations: {}
+podAnnotations:
+  sidecar.istio.io/inject: "true"
+
 podLabels: {}
 
 podSecurityContext: {}
