--- a/calculationbff/values.yaml
+++ b/calculationbff/values.yaml
@@ -28,7 +28,9 @@ serviceAccount:
 podAnnotations:
   sidecar.istio.io/inject: "true"
 
-podLabels: {}
+podLabels:
+  app: "calculation"
+  version: "1.0.0"
 
 podSecurityContext: {}
   # fsGroup: 2000
